--- a/index.html
+++ b/index.html
@@ -5,18 +5,13 @@
     <meta charset="UTF-8" />
     <!-- 여기 아래에 복사 붙여넣기 합니다. -->
     <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-2VZJ1KXNZ5"
-    ></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BD78GL7S8Y"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-2VZJ1KXNZ5");
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-BD78GL7S8Y');
     </script>
     <!-- 여기 위에 복사 붙여넣기 합니다. -->
   </head>
