--- a/ga4_d3.html
+++ b/ga4_d3.html
@@ -3,12 +3,12 @@
 <head>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1RB41TSQTM"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3EFZ2EDYWV"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-1RB41TSQTM');
+      gtag('config', 'G-3EFZ2EDYWV');
     </script>
 
 
