--- a/ga4_d1.html
+++ b/ga4_d1.html
@@ -13,7 +13,9 @@
     
     <meta charset="UTF-8">
     <title>만년 다이어리 쇼핑몰 - 회원가입</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    
     <script>
         // 가입하기 버튼 클릭 이벤트 처리
         function signUp() {
@@ -28,6 +30,17 @@
     </script>
 </head>
 <body>
+  
+  <nav>
+    <ul>
+      <li><a href="./index.html">HOME</a></li>
+      <li><a href="./ga4_d1.html">회원가입안내</a></li>
+      <li><a href="./ga4_d2.html">회원가입</a></li>
+      <li><a href="./ga4_d3.html">물품구입</a></li>
+    </ul>
+  </nav>
+  
+  <article>
     <div class="container">
         <h1 class="title">만년 다이어리 쇼핑몰 회원가입</h1>
         <div class="description">
@@ -40,5 +53,6 @@
         </div>
         <button class="signup-btn" onclick="signUp()">가입하기</button>
     </div>
+  </article>
 </body>
 </html>
