--- a/ga4_d2.html
+++ b/ga4_d2.html
@@ -13,65 +13,22 @@
     
     <meta charset="UTF-8">
     <title>만년 다이어리 쇼핑몰 - 회원가입</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
 
-    <style>
-        body {
-            font-family: 'Noto Sans KR', sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        .container {
-            border: 1px solid #ddd;
-            padding: 40px;
-            border-radius: 8px;
-        }
-        .title {
-            color: #333;
-            text-align: center;
-            margin-bottom: 30px;
-        }
-        .input-group {
-            margin-bottom: 20px;
-        }
-        .input-group label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        .input-group input {
-            width: 100%;
-            padding: 8px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-        }
-        .phone-group {
-            display: flex;
-            gap: 10px;
-        }
-        .verify-btn {
-            background-color: #4CAF50;
-            color: white;
-            padding: 8px 20px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        .submit-btn {
-            background-color: #4CAF50;
-            color: white;
-            padding: 15px 40px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            width: 100%;
-            font-size: 16px;
-            margin-top: 20px;
-        }
-    </style>
 </head>
 <body>
+  <nav>
+    <ul>
+      <li><a href="./index.html">HOME</a></li>
+      <li><a href="./ga4_d1.html">회원가입안내</a></li>
+      <li><a href="./ga4_d2.html">회원가입</a></li>
+      <li><a href="./ga4_d3.html">물품구입</a></li>
+    </ul>
+  </nav>
+  <article>
     <div class="container">
-        <h1 class="title">회원가입</h1>
+        <h1 class="title">쇼핑몰회원가입</h1>
         <form class="signup-form" onsubmit="return validateForm()">
             <div class="input-group">
                 <label for="userid">아이디</label>
@@ -109,8 +66,8 @@
             <button type="submit" class="submit-btn">가입하기</button>
         </form>
     </div>
-
-    <script>
+  </article>
+  <script>
         function verifyPhone() {
             gtag('event', 'try_sign_up', { step: 'phone_check' });
             alert('인증번호가 발송되었습니다.');
@@ -127,6 +84,6 @@
             alert('회원가입이 완료되었습니다.');
             return true;
         }
-    </script>
+  </script>
 </body>
 </html>
