--- a/ga4_d3.html
+++ b/ga4_d3.html
@@ -11,51 +11,22 @@
       gtag('config', 'G-3EFZ2EDYWV');
     </script>
 
-
     <meta charset="UTF-8">
     <title>다이어리 쇼핑몰</title>
-    <style>
-        body {
-            font-family: 'Noto Sans KR', sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        .product {
-            border: 1px solid #ddd;
-            padding: 20px;
-            border-radius: 8px;
-        }
-        .product-image {
-            width: 100%;
-            max-width: 400px;
-            height: auto;
-            margin-bottom: 20px;
-        }
-        .product-title {
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
-        .product-price {
-            font-size: 20px;
-            color: #e44d26;
-            margin-bottom: 20px;
-        }
-        .add-to-cart {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        .add-to-cart:hover {
-            background-color: #45a049;
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
+  <nav>
+    <ul>
+      <li><a href="./index.html">HOME</a></li>
+      <li><a href="./ga4_d1.html">회원가입안내</a></li>
+      <li><a href="./ga4_d2.html">회원가입</a></li>
+      <li><a href="./ga4_d3.html">물품구입</a></li>
+    </ul>
+  </nav>
+  <article>
     <div class="product">
         <h1 class="product-title">만년 프리미엄 다이어리</h1>
         <img src="./img/diary.jpg" width="400" height="300" alt="다이어리 이미지" class="product-image">
@@ -63,23 +34,23 @@
         <p>수량: 1개</p>
         <button class="add-to-cart" onclick="addToCart()">장바구니 담기</button>
     </div>
-
-    <script>
-        function addToCart() {
-            // GA4 이벤트 트래킹 코드
-            gtag('event', 'add_to_cart', {
-                currency: 'KRW',
-                value: 5001,
-                items: [{
-                    item_id: 'diary_2024',
-                    item_name: '만년 프리미엄 다이어리',
-                    price: 5001,
-                    quantity: 1
-                }]
-            });
-            
-            alert('장바구니에 상품이 담겼습니다!');
-        }
-    </script>
+  </article>
+  <script>
+      function addToCart() {
+          // GA4 이벤트 트래킹 코드
+          gtag('event', 'add_to_cart', {
+              currency: 'KRW',
+              value: 5001,
+              items: [{
+                  item_id: 'diary_2024',
+                  item_name: '만년 프리미엄 다이어리',
+                  price: 5001,
+                  quantity: 1
+              }]
+          });
+          
+          alert('장바구니에 상품이 담겼습니다!');
+      }
+  </script>  
 </body>
 </html>
