--- a/ga4_d2.html
+++ b/ga4_d2.html
@@ -3,12 +3,12 @@
 <head>
     
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3EFZ2EDYWV"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1RB41TSQTM"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-3EFZ2EDYWV');
+      gtag('config', 'G-1RB41TSQTM');
     </script>
     
     <meta charset="UTF-8">
@@ -21,7 +21,7 @@
   <nav>
     <ul>
       <li><a href="./index.html">HOME</a></li>
-      <li><a href="./ga4_d1.html">회원가입안내</a></li>
+      <li><a href="./ga4_d1.html">가입안내</a></li>
       <li><a href="./ga4_d2.html">회원가입</a></li>
       <li><a href="./ga4_d3.html">물품구입</a></li>
     </ul>
