--- a/ga4_d3.html
+++ b/ga4_d3.html
@@ -3,12 +3,12 @@
 <head>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3EFZ2EDYWV"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1RB41TSQTM"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-3EFZ2EDYWV');
+      gtag('config', 'G-1RB41TSQTM');
     </script>
 
     <meta charset="UTF-8">
@@ -21,7 +21,7 @@
   <nav>
     <ul>
       <li><a href="./index.html">HOME</a></li>
-      <li><a href="./ga4_d1.html">회원가입안내</a></li>
+      <li><a href="./ga4_d1.html">가입안내</a></li>
       <li><a href="./ga4_d2.html">회원가입</a></li>
       <li><a href="./ga4_d3.html">물품구입</a></li>
     </ul>
@@ -30,27 +30,28 @@
     <div class="product">
         <h1 class="product-title">만년 프리미엄 다이어리</h1>
         <img src="./img/diary.jpg" width="400" height="300" alt="다이어리 이미지" class="product-image">
-        <p class="product-price">가격: 5,001원</p>
+        <p class="product-price">가격: 6,000원</p>
         <p>수량: 1개</p>
         <button class="add-to-cart" onclick="addToCart()">장바구니 담기</button>
     </div>
+
+    <script>
+        function addToCart() {
+            // GA4 이벤트 트래킹 코드
+            gtag('event', 'add_to_cart', {
+                currency: 'KRW',
+                value: 6000,
+                items: [{
+                    item_id: 'diary_2024',
+                    item_name: '만년 프리미엄 다이어리',
+                    price: 6000,
+                    quantity: 1
+                }]
+            });
+            
+            alert('장바구니에 상품이 담겼습니다!');
+        }
+    </script>
   </article>
-  <script>
-      function addToCart() {
-          // GA4 이벤트 트래킹 코드
-          gtag('event', 'add_to_cart', {
-              currency: 'KRW',
-              value: 5001,
-              items: [{
-                  item_id: 'diary_2024',
-                  item_name: '만년 프리미엄 다이어리',
-                  price: 5001,
-                  quantity: 1
-              }]
-          });
-          
-          alert('장바구니에 상품이 담겼습니다!');
-      }
-  </script>  
 </body>
 </html>
