--- a/index.html
+++ b/index.html
@@ -12,32 +12,8 @@
 
     <title>GA4 Example for Github</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
 
-    <style>
-        /* 왼쪽 메뉴 스타일 */
-        nav {
-            width: 20%;
-            float: left;
-            background-color: #f1f1f1;
-            padding: 20px;
-        }
-
-        /* 오른쪽 내용 영역 스타일 */
-        article {
-            width: 80%;
-            float: right;
-            padding: 20px;
-        }
-        
-        /* 스마트폰 화면 (예시: 너비 768px 이하) */
-        @media (max-width: 768px) {
-            nav, article {
-                width: 100%;
-                float: none;
-            }
-        }
-        
-    </style>
 </head>
 <body>
   <nav>
