--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1RB41TSQTM"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BD78GL7S8Y"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-1RB41TSQTM');
+      gtag('config', 'G-BD78GL7S8Y');
     </script>
 
     <title>GA4 Example for Github</title>
