--- a/ga4_d2.html
+++ b/ga4_d2.html
@@ -3,12 +3,12 @@
 <head>
     
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1RB41TSQTM"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BD78GL7S8Y"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-1RB41TSQTM');
+      gtag('config', 'G-BD78GL7S8Y');
     </script>
     
     <meta charset="UTF-8">
