--- a/ga4_d1.html
+++ b/ga4_d1.html
@@ -42,7 +42,7 @@
   
   <article>
     <div class="container">
-        <h1 class="title">만년 다이어리 쇼핑몰 회원가입</h1>
+        <h1 class="title">다이어리 쇼핑몰 회원가입</h1>
         <div class="description">
             <p>만년 다이어리 쇼핑몰에 오신 것을 환영합니다.</p>
             <p>회원가입을 통해 다양한 혜택을 누려보세요:</p>
