--- a/ga4_d2.html
+++ b/ga4_d2.html
@@ -50,11 +50,11 @@
             
             <div class="input-group">
                 <label for="phone">휴대폰 번호</label>
-                <div class="phone-group">
+                <!-- <div class="phone-group"> -->
                     <input type="tel" id="phone" name="phone" required
                            onchange="gtag('event', 'try_sign_up', { step: 'phone'})">
                     <button type="button" onclick="verifyPhone()" class="verify-btn">인증</button>
-                </div>
+                <!-- </div> -->
             </div>
             
             <div class="input-group">
