--- a/ga4_d2.html
+++ b/ga4_d2.html
@@ -53,7 +53,7 @@
                 <!-- <div class="phone-group"> -->
                     <input type="tel" id="phone" name="phone" required
                            onchange="gtag('event', 'try_sign_up', { step: 'phone'})">
-                    <button type="button" onclick="verifyPhone()" class="verify-btn">인증</button>
+                    <button type="button" onclick="verifyPhone()" class="verify-btn">인증하기</button>
                 <!-- </div> -->
             </div>
             
