--- a/ga4_d2.html
+++ b/ga4_d2.html
@@ -49,7 +49,7 @@
             </div>
             
             <div class="input-group">
-                <label for="phone">휴대폰 번호</label>
+                <label for="phone">휴대폰 번호1</label>
                 <p></p>
                 <div class="phone-group">
                     <input type="tel" id="phone" name="phone" required
