--- a/ga4_d2.html
+++ b/ga4_d2.html
@@ -49,8 +49,7 @@
             </div>
             
             <div class="input-group">
-                <label for="phone">휴대폰 번호1</label>
-                <p></p>
+                <label for="phone">휴대폰 번호 </label>
                 <div class="phone-group">
                     <input type="tel" id="phone" name="phone" required
                            onchange="gtag('event', 'try_sign_up', { step: 'phone'})">
